--- a/css/equipe.css
+++ b/css/equipe.css
@@ -89,15 +89,27 @@ header {
         margin: 10px 0; 
     }
 }
+.hamburger {
+    display: flex;
+    justify-content: space-between; 
+    cursor: pointer;
+    padding: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    order: 2;
+}
 
+
+.hamburger:hover {
+    color: #e76949; 
+}
 /* Esconder botão hamburguer em dispositivos maiores que tablet */
 @media (min-width: 992px) {
     .hamburger {
         display: none;
     }
 }
-
-
 /* css da section chefes*/
 
 .chefes {
@@ -414,5 +426,29 @@ footer {
     }
 }
 
+/*botão voltar ao topo*/
+
+#btnTopo {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    background-color: #0f0f0f;
+    color: white;
+    border: none;
+    border-radius: 50%; 
+    width: 50px; 
+    height: 50px; 
+    padding: 0; 
+    font-size: 20px; 
+    line-height: 50px; 
+    text-align: center; 
+    cursor: pointer;
+}
+
+#btnTopo::before {
+    content: '\25B2'; 
+}
 
 
