--- a/css/loja.css
+++ b/css/loja.css
@@ -92,13 +92,25 @@ header {
     }
 }
 
+.hamburger {
+    display: flex;
+    justify-content: space-between; 
+    cursor: pointer;
+    padding: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    order: 2;
+}
+.hamburger:hover {
+    color: #e76949; 
+}
 /* Esconder botão hamburguer em dispositivos maiores que tablet */
 @media (min-width: 992px) {
     .hamburger {
         display: none;
     }
 }
-
 /*css dos itens da loja*/
 
 .controle {
@@ -161,6 +173,12 @@ button {
 button:hover {
     background-color: #eca695;
 }
+/*carrinho*/
+.carrinho-btn i {
+    margin-right: 5px;
+    font-size: 18px; 
+}
+
 
 /* Estilos para tablets (até 768px) */
 @media (max-width: 768px) {
@@ -314,3 +332,27 @@ footer {
     }
 }
 
+/*botão voltar ao topo*/
+
+#btnTopo {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    background-color: #0f0f0f;
+    color: white;
+    border: none;
+    border-radius: 50%; 
+    width: 50px; 
+    height: 50px; 
+    padding: 0; 
+    font-size: 20px; 
+    line-height: 50px; 
+    text-align: center; 
+    cursor: pointer;
+}
+
+#btnTopo::before {
+    content: '\25B2'; 
+}
