--- a/css/loja.css
+++ b/css/loja.css
@@ -211,7 +211,6 @@ footer a:hover {
 
 main {
     display: flex;
-    
     flex-direction: column;
     flex-wrap: wrap;
     margin-left: 1%;
@@ -222,39 +221,48 @@ main {
     margin: 8px;
 }
 
-.vitrine {
+.item {
+    background-color: #eed6ba8e;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-direction: row;
+    width: 26em;
     align-items: center;
-    justify-content: space-between;
-    text-align: right;
-    padding: 10px;
+    justify-content: space-around;
+
+    text-align: center;
+    line-height: 1.2em;
+
+    padding: 1em;
     border: 1px solid rgb(174, 166, 166);
-    margin: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px  rgba(107, 106, 106, 0.816);
+    margin: 1.5em;
+    border-radius: 3px;
     transition: 0.2s;
-    width: 55vh;
-}
-.vitrine:hover {
-    box-shadow: 0px 2px 5px  rgba(0, 0, 0, 0.816);
 }
 
-.vitrine img {
-    border-radius: 5px;
-    width: 150px;
-    height: 100px;
-    
+.item:hover {
+    background-color: #eed6ba;
+    box-shadow: 0px 2px 3px  rgba(51, 51, 51, 0.816);
 }
-.vitrine ul {
+
+.item p {
+    text-align: justify;
+}
+
+.item img {
+    border-radius: 3px;
+    width: 12em;
+    height: 10em;
+    align-items: center;
+}
+
+.item ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     gap: 16px;
     padding: 10px 0 0;
 }
-.vitrine ul li a {
+.item ul li a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -271,10 +279,32 @@ main {
     transition: 0.2s;
     color: black;
 }
-.vitrine ul li a:hover {
+.item ul li a:hover {
     color: aliceblue;
     background-color: #D66049;
     border: 1px solid rgba(0, 0, 0, 0.816);
+}
+
+.descricao {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    margin: 0 1em 0 0;
+}
+
+.descricao img {
+    width: 0.90em;
+    height: 0.90em;
+    align-items: center;
+}
+
+.descricao h4 {
+    font-size: 1em;
+}
+
+.descricao p {
+    align-items: stretch;
 }
 
 .foto {
@@ -282,7 +312,7 @@ main {
     align-items: end;
     justify-content: right;
 }
-.container-vitrine {
+.container-item {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
