--- a/css/receitas.css
+++ b/css/receitas.css
@@ -108,7 +108,7 @@ header {
 
 
 .hamburger:hover {
-    color: #e76949; 
+    color: #ff9100; 
 }
 /* Esconder botão hamburguer em dispositivos maiores que tablet */
 @media (min-width: 992px) {
@@ -169,7 +169,7 @@ header {
   }
   
   .card button {
-    background-color: #ff3009;
+    background-color: #ff3900;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -215,7 +215,7 @@ list-style-type: decimal;
 } 
 
 
-  @media screen and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .card {
       width: calc(50% - 20px); /* 50% para cada card em telas de tamanho médio */
     }
@@ -223,7 +223,7 @@ list-style-type: decimal;
   
   @media screen and (max-width: 768px) {
     .card {
-      width: calc(100% - 20px); /
+      width: calc(100% - 20px); /* Correção: removi a barra */
     }
   }
   
@@ -232,7 +232,7 @@ list-style-type: decimal;
 
 footer {
     width: 100%;
-    color: #ffffff;
+    color: #fff;
 }
 
 .footer-link {
@@ -262,7 +262,7 @@ footer {
     justify-content: center;
     height: 2.5rem;
     width: 2.5rem;
-    color:#ffffff;
+    color:#fff;
     border-radius: 50%;
     transition: all 0.4s;
 }
@@ -295,12 +295,12 @@ footer {
 }
 
 .footer-list .footer-link {
-    color: #ffffff;
+    color: #fff;
     transition: all 0.4s;
 }
 
 .footer-list .footer-link:hover {
-    color: #e76949;
+    color: #ff9100;
 }
 
 #footer_subscribe {
@@ -309,14 +309,15 @@ footer {
     gap: 1.5rem;
 }
 
+
 #footer_subscribe p {
-    color:#ffffff;
+    color:#fff;
 }
 
 #input_group {
     display: flex;
     align-items: center;
-    background-color:#ffffff;
+    background-color:#fff;
     border-radius: 4px;
 }
 
@@ -329,7 +330,7 @@ footer {
 #input_group button {
     background-color: #0f0f0f;
     border: none;
-    color: #ffffff;
+    color: #fff;
     padding: 0px 1.25rem;
     font-size: 1.125rem;
     height: 100%;
@@ -374,7 +375,7 @@ footer {
     right: 20px;
     z-index: 99;
     background-color: #0f0f0f;
-    color: white;
+    color: #fff;
     border: none;
     border-radius: 50%; 
     width: 50px; 
