--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #e7dec4;
+   
     font-family: "Open Sans", sans-serif;
     min-height: 100vh;
     display: flex;
@@ -132,7 +132,7 @@ input[type="radio"] {
 input[type="submit"] {
     width: 100%;
     padding: 12px;
-    background-color: #ff3909;
+    background-color: #ff3900;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -141,7 +141,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #c55c05;
+    background-color: #ff9100;
 }
 
 .helper-text {
@@ -195,11 +195,13 @@ input[type="submit"]:hover {
     }
 }
 
-/*css do footer*/
+
+/*Estilo do footer*/
 
 footer {
     width: 100%;
-    color: #ffffff;
+    color: #fff;
+    justify-content: center;
 }
 
 .footer-link {
@@ -207,7 +209,7 @@ footer {
 }
 
 #footer_content {
-    background-color:#ff3909;
+    background-color:#ff3900;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 3rem 3.5rem;
@@ -262,12 +264,12 @@ footer {
 }
 
 .footer-list .footer-link {
-    color: #ffffff;
+    color: #fff;
     transition: all 0.4s;
 }
 
 .footer-list .footer-link:hover {
-    color: #e76949;
+    color: #ff9100;
 }
 
 #footer_subscribe {
@@ -277,13 +279,13 @@ footer {
 }
 
 #footer_subscribe p {
-    color:#ffffff;
+    color:#fff;
 }
 
 #input_group {
     display: flex;
     align-items: center;
-    background-color:#ffffff;
+    background-color:#fff;
     border-radius: 4px;
 }
 
@@ -296,7 +298,7 @@ footer {
 #input_group button {
     background-color: #0f0f0f;
     border: none;
-    color: #ffffff;
+    color: #fff;
     padding: 0px 1.25rem;
     font-size: 1.125rem;
     height: 100%;
@@ -330,4 +332,50 @@ footer {
         grid-template-columns: repeat(1, 1fr);
         padding: 3rem 2rem;
     }
+}
+/*botão voltar ao topo*/
+
+#btnTopo {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    background-color: #0f0f0f;
+    color: #fff;
+    border: none;
+    border-radius: 50%; 
+    width: 50px; 
+    height: 50px; 
+    padding: 0; 
+    font-size: 20px; 
+    line-height: 50px; 
+    text-align: center; 
+    cursor: pointer;
+}
+
+.descricao {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    margin: 0 1em 0 0;
+}
+
+.descricao img {
+    width: 0.90em;
+    height: 0.90em;
+    align-items: center;
+}
+
+.descricao h4 {
+    font-size: 1em;
+}
+
+.descricao p {
+    align-items: stretch;
+}
+
+#btnTopo::before {
+    content: '\25B2'; 
 }
