--- a/css/login.css
+++ b/css/login.css
@@ -117,205 +117,7 @@ header {
         display: none;
     }
 }
-/*css form*/
-.form {
-    max-width: 600px;
-    margin: 50px auto;
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
 
-h2 {
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.form-group {
-    margin-bottom: 20px;
-}
-
-label {
-    font-weight: bold;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-
-input[type="submit"] {
-    width: 100%;
-    padding: 12px;
-    background-color: #ff3909;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-input[type="submit"]:hover {
-    background-color: #c55c05;
-}
-
-/* Estilos responsivos */
-@media screen and (max-width: 768px) {
-    .container {
-        margin: 30px auto;
-        padding: 20px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .container {
-        margin: 20px auto;
-        padding: 15px;
-    }
-}
-
-/*css do footer*/
-
-footer {
-    width: 100%;
-    color: #ffffff;
-}
-
-.footer-link {
-    text-decoration: none;
-}
-
-#footer_content {
-    background-color:#ff3909;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 3rem 3.5rem;
-}
-
-#footer_contacts h1 {
-    margin-bottom: 0.75rem;
-}
-
-#footer_social_media {
-    display: flex;
-    gap: 2rem;
-    margin-top: 1.5rem;
-} 
-
-#footer_social_media .footer-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.5rem;
-    width: 2.5rem;
-    color:#ffffff;
-    border-radius: 50%;
-    transition: all 0.4s;
-}
-
-#footer_social_media .footer-link i {
-    font-size: 1.25rem;    
-}
-
-#footer_social_media .footer-link:hover {
-    opacity: 0.8;
-}
-
-#instagram {
-    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
-}
-
-#facebook {
-    background-color: #4267b3;
-}
-
-#whatsapp {
-    background-color: #25d366;
-}
-
-.footer-list {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-    list-style: none;
-}
-
-.footer-list .footer-link {
-    color: #ffffff;
-    transition: all 0.4s;
-}
-
-.footer-list .footer-link:hover {
-    color: #e76949;
-}
-
-#footer_subscribe {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-}
-
-#footer_subscribe p {
-    color:#ffffff;
-}
-
-#input_group {
-    display: flex;
-    align-items: center;
-    background-color:#ffffff;
-    border-radius: 4px;
-}
-
-#input_group input {
-    all: unset;
-    padding: 0.75rem;
-    width: 100%;
-}
-
-#input_group button {
-    background-color: #0f0f0f;
-    border: none;
-    color: #ffffff;
-    padding: 0px 1.25rem;
-    font-size: 1.125rem;
-    height: 100%;
-    border-radius: 0px 4px 4px 0px;
-    cursor: pointer;
-    transition: all 0.4s;
-}
-
-#input_group button:hover {
-    opacity: 0.8;
-}
-
-#footer_copyright {
-    display: flex;
-    justify-content: center;
-    background-color:#0f0f0f;
-    font-size: 0.9rem;
-    padding: 1.5rem;
-    font-weight: 100;
-}
-
-@media screen and (max-width: 768px) {
-    #footer_content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2rem;
-    }
-}
-
-@media screen and (max-width: 426px) {
-    #footer_content {
-        grid-template-columns: repeat(1, 1fr);
-        padding: 3rem 2rem;
-    }
-}
 /*css form*/
 .form {
     max-width: 400px;
@@ -353,7 +155,7 @@ input[type="password"] {
 button[type="submit"] {
     width: 100%;
     padding: 12px;
-    background-color: #ff3909;
+    background-color: #ff3900;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -362,7 +164,7 @@ button[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #c55c05;
+    background-color: #ff9100;
 }
 
 /* estilos dinâmicos */
@@ -416,6 +218,7 @@ input[type="submit"]:hover {
     }
 }
 
+
 /*Estilo do footer*/
 
 footer {
@@ -429,7 +232,7 @@ footer {
 }
 
 #footer_content {
-    background-color:#ff3909;
+    background-color:#ff3900;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 3rem 3.5rem;
@@ -574,7 +377,28 @@ footer {
     cursor: pointer;
 }
 
+.descricao {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    margin: 0 1em 0 0;
+}
+
+.descricao img {
+    width: 0.90em;
+    height: 0.90em;
+    align-items: center;
+}
+
+.descricao h4 {
+    font-size: 1em;
+}
+
+.descricao p {
+    align-items: stretch;
+}
+
 #btnTopo::before {
     content: '\25B2'; 
 }
-
