--- a/css/receitas.css
+++ b/css/receitas.css
@@ -383,6 +383,29 @@ footer {
     cursor: pointer;
 }
 
+.descricao {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    margin: 0 1em 0 0;
+}
+
+.descricao img {
+    width: 0.90em;
+    height: 0.90em;
+    align-items: center;
+}
+
+.descricao h4 {
+    font-size: 1em;
+}
+
+.descricao p {
+    align-items: stretch;
+}
+
 #btnTopo::before {
     content: '\25B2'; 
 }
+
