--- a/css/equipe.css
+++ b/css/equipe.css
@@ -336,15 +336,19 @@ footer {
 
 #instagram {
     background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+    color: #fff; 
 }
 
 #facebook {
     background-color: #4267b3;
+    color: #fff; 
 }
 
 #whatsapp {
     background-color: #25d366;
+    color: #fff; 
 }
+
 
 .footer-list {
     display: flex;
@@ -445,27 +449,7 @@ footer {
     cursor: pointer;
 }
 
-.descricao {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 100%;
-    margin: 0 1em 0 0;
-}
 
-.descricao img {
-    width: 0.90em;
-    height: 0.90em;
-    align-items: center;
-}
-
-.descricao h4 {
-    font-size: 1em;
-}
-
-.descricao p {
-    align-items: stretch;
-}
 
 #btnTopo::before {
     content: '\25B2'; 
