--- a/css/home.css
+++ b/css/home.css
@@ -433,18 +433,21 @@ footer {
 #footer_social_media .footer-link:hover {
     opacity: 0.8;
 }
-
 #instagram {
     background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+    color: #fff; 
 }
 
 #facebook {
     background-color: #4267b3;
+    color: #fff; 
 }
 
 #whatsapp {
     background-color: #25d366;
+    color: #fff; 
 }
+
 
 .footer-list {
     display: flex;
@@ -461,6 +464,7 @@ footer {
 .footer-list .footer-link:hover {
     color: #ff9100;
 }
+
 #footer_subscribe {
     display: flex;
     flex-direction: column;
@@ -545,27 +549,6 @@ footer {
     cursor: pointer;
 }
 
-.descricao {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 100%;
-    margin: 0 1em 0 0;
-}
-
-.descricao img {
-    width: 0.90em;
-    height: 0.90em;
-    align-items: center;
-}
-
-.descricao h4 {
-    font-size: 1em;
-}
-
-.descricao p {
-    align-items: stretch;
-}
 
 #btnTopo::before {
     content: '\25B2'; 
