--- a/css/login.css
+++ b/css/login.css
@@ -269,15 +269,19 @@ footer {
 
 #instagram {
     background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+    color: #fff; 
 }
 
 #facebook {
     background-color: #4267b3;
+    color: #fff; 
 }
 
 #whatsapp {
     background-color: #25d366;
+    color: #fff; 
 }
+
 
 .footer-list {
     display: flex;
@@ -321,7 +325,7 @@ footer {
 #input_group button {
     background-color: #0f0f0f;
     border: none;
-    color: #fff;
+    color: #ffffff;
     padding: 0px 1.25rem;
     font-size: 1.125rem;
     height: 100%;
@@ -333,6 +337,7 @@ footer {
 #input_group button:hover {
     opacity: 0.8;
 }
+
 
 #footer_copyright {
     display: flex;
@@ -377,27 +382,7 @@ footer {
     cursor: pointer;
 }
 
-.descricao {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 100%;
-    margin: 0 1em 0 0;
-}
 
-.descricao img {
-    width: 0.90em;
-    height: 0.90em;
-    align-items: center;
-}
-
-.descricao h4 {
-    font-size: 1em;
-}
-
-.descricao p {
-    align-items: stretch;
-}
 
 #btnTopo::before {
     content: '\25B2'; 
